test/program2.mj
program p



class Base {
    {
        void m1() {
        }
    }
}
class Derived extends Base {
   {
           void m1() {
           }
       }
}

{

    void f() {

    }

    void main() {

    }

    void f2(int x, Base b) {

    }

    void formParamCallTest() Base b; Derived d; {
        b = d;
        f2(5, d);
        f();
        b.m1();
        f(5);
        f2();
        f2('x',5);
        f2(5, b);
    }

    void assignTest() Base base; Derived derived; {
       base = derived;
       derived = base;
    }

    void breakContinueTEst() {
        do {
            break;
            continue;
        } while (true);
        break;
        continue;
    }
    void printReadTest() Base b; int i; char c; bool bo; {
        read(b); //error
        read(i);
        read(c);
        read(bo);
        print(b); //error
        print(i);
        print(c);
        print(bo);
        print(5);
    }

    void returnStatementTest1() {
        return 5;
        return;
    }


    int returnStatementTest2() {
        return;
        return 5;
    }

    Base returnStatementTest3() Derived d; {
        return;
        return 5;
        return d;
    }
}


